[package]
name = "pa-dsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
samplerate = "0.2.4"
dasp_signal = "0.11.0"
dasp_interpolate = { version = "0.11.0", default-features = false, features = ["floor", "linear", "sinc"]}
dasp_frame = { version = "0.11.0" }
rand = "0.8.5"
hound = "3.5.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.91"

[lib]
path = "lib.rs"